chore : git action에 resources 파일 생성 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           java-version: 17
 
+      - name: create resource file
+        run: mkdir -p ./src/main/resources
+        shell: bash
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
